tr short update

--- a/packages/timeago/example/index.html
+++ b/packages/timeago/example/index.html
@@ -115,6 +115,7 @@
     <a href="#" class="locale-link">th_short</a>
     <a href="#" class="locale-link">tk</a>
     <a href="#" class="locale-link">tr</a>
+    <a href="#" class="locale-link">tr_short</a>
     <a href="#" class="locale-link">uk</a>
     <a href="#" class="locale-link">uk_short</a>
     <a href="#" class="locale-link">ur</a>
