Add indonesian short messages

--- a/packages/timeago/example/index.html
+++ b/packages/timeago/example/index.html
@@ -80,6 +80,7 @@
     <a href="#" class="locale-link">hu</a>
     <a href="#" class="locale-link">hu_short</a>
     <a href="#" class="locale-link">id</a>
+    <a href="#" class="locale-link">id_short</a>
     <a href="#" class="locale-link">it</a>
     <a href="#" class="locale-link">it_short</a>
     <a href="#" class="locale-link">ja</a>
